--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "mocha": "^2.3.4"
   },
   "dependencies": {
+    "express": "^4.13.3",
     "immutable": "^3.7.6",
     "redux": "^3.0.5",
     "socket.io": "^1.3.7"
